--- a/app/View/admin/examBank/add.html
+++ b/app/View/admin/examBank/add.html
@@ -11,7 +11,7 @@
             <div class="form-group">
                 <label for="exampleFormControlSelect1" class="float-right mt-3">المرحلة</label>
                 <select class="form-control" id="exampleFormControlSelect1" name="levels_id">
-                {% for level in lavels %}
+                {% for level in levels %}
                 
 
                         <option value="{{level['id']}}">{{level['name']}}</option>
