--- a/app/View/admin/groups/home.html
+++ b/app/View/admin/groups/home.html
@@ -1,46 +1,99 @@
-<div class="col-md-12 text-center mb-3 mt-3">
-    <button class="btn btn-primary"> إضافة</button>
-</div>
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="container mb-3 mt-3">
-                <div class="alert alert-danger mt-3 text-right" role="alert">
-                    <p>هل انت متأكد من حذف هذه المجموعة؟</p>
+<div class="overlay-background">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">الأستاذ معوض</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav float-right text-right">
+                <a class="nav-link active" href="/admin/examsBank">بنك الأسألة <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/admin/exam/home">الإمتحانات</a>
+                <a class="nav-link" href="/admin/student">الطلاب</a>
+                <a class="nav-link" href="/admin/levels">المراحل</a>
+                <a class="nav-link" href="/admin/groups">المجموعات</a>
+                <a class="nav-link" href="/admin/absent">الغياب</a>
+                <a class="nav-link" href="/admin/membership">الشهر</a>
+                <a class="nav-link" href="/admin/secretary">المشرفين</a>
+                <div class="dropdown">
+                    <button style="color: #FFF;" class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            خيارات
+                        </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل</a>
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تاني</a>
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تالت</a>
+                    </div>
                 </div>
-                <div class="float-right">
-                    <button type="button" id='target2' class="btn btn-danger ml-1">نعم</button>
-                    <button type="button" id="target3" class="btn btn-light">لا</button>
+
+            </div>
+        </div>
+    </nav>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container mb-3 mt-3">
+                    <div class="alert alert-danger mt-3" role="alert">
+                        <p>هل انت متأكد من حذف هذه المجموعة؟</p>
+                    </div>
+                    <div>
+                        <button type="button" id='target2' class="btn btn-danger ml-1">نعم</button>
+                        <button type="button" id="target3" class="btn btn-light">لا</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="container">
-    <table id="myTable" class="display nowrap text-right" style="width:100%">
-        <thead>
-            <tr>
-                <th>المرحلة</th>
-                <th>المجموعة</th>
-                <th>تعديل</th>
-                <th>حذف</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for group in groups %}
-            <div>
-                <tr>
-                    <td> {{levels[group['id']-1]['name']}}</td>
-                    <td> {{group['name']}} {{group['group_data']}} </td>
-                    <td><a href="/admin/groups/edit/{{group['id']}}"><button type="button" class="btn btn-success">
-                        تعديل
-                    </button></a></td>
-                    <td><a href="/admin/groups/delete/{{group['id']}}"><button type="button" class="btn btn-danger btnDelete" data-toggle="modal" data-target="#exampleModal">
-                        حذف
-                    </button></a></td>
-                </tr>
+    <div class="col-md-12 text-center mb-3 mt-3">
+        <a href="/admin/groups/add"> <button class="btn btn-primary"> اضافه</button>
+        </a>
+    </div>
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container mb-3 mt-3">
+                    <form action="{{form}}" method="POST" autocomplete="off" class="mt-3 mb-3">
+                        <div class="form-group">
+                            <label style="color: #000;" for="formGroupExampleInput">تعديل المجموعة</label>
+                            <input type="text" name="name" class="form-control input-sm cheque-amt toedt" Placeholder="Enter Cheque Amount" onkeypress="return isNumber(event)">
+                            <div>
+                                <button id="target4" type="button" class="btn btn-primary mt-3">تأكيد</button>
+                                <button id="target5" type="button" class="btn mt-3">عودة</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            {% endfor %}
-        </tbody>
-    </table>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div style="z-index: 3 !important;">
+
+            <table id="myTable" class="display nowrap" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>المجموعة</th>
+                        <th>تعديل</th>
+                        <th>حذف</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for group in groups %}
+                    <div>
+                        <tr>
+                            <td class="cheque-amt">{{group['name']}}</td>
+                            <td><button type="button" class="btn btn-success btnedit" data-toggle="modal" data-target="#exampleModal2">
+										تعديل
+									</button></td>
+                            <td><button type="button" class="btn btn-danger btnDelete" data-toggle="modal" data-target="#exampleModal">
+										حذف
+									</button></td>
+                        </tr>
+                    </div>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
