--- a/app/View/admin/membership/home.html
+++ b/app/View/admin/membership/home.html
@@ -1,13 +1,13 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="container">
                 <form class="text-right mt-3 mb-3" action="{{form}}" method="POST" autocomplete="off">
-                    <input type="hidden" name="students_id">
                     <div class="form-group">
                         <label for="formGroupExampleInput">اسم الطالب</label>
-
                         <input type="text" name="name" disabled class="form-control input-sm cheque-amt" Placeholder="Enter Cheque Amount" onkeypress="return isNumber(event)">
+                        <input type="hidden" name="students_id" class="form-control input-sm students_id" Placeholder="id">
+
                     </div>
                     <div class="form-group">
                         <label for="inputState">الشهر</label>
@@ -64,17 +64,169 @@
         <tbody>
             <tr>
                 {% for student in students %}
+
                 <td class="cheque-amt">{{student['name']}}</td>
-                <!-- <td>{{memberships['id']['month']}}</td> -->
+                <td>{{memberships['id']['month']}}</td>
                 <td></td>
                 <td>{{groups[student['groups_id']-1]['name']}}</td>
                 <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
 							دفع
                         </button></td>
-                <td style="display: none;" class="students_id">{{students[membership['students_id']-1]['id']}}</td>
+                <td style="display: none;" class="students_id">{{student['id']}}</td>
             </tr>
             {% endfor %}
 
         </tbody>
     </table>
+</div> -->
+
+
+
+
+<div class="overlay-background">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">الأستاذ معوض</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav float-right text-right">
+                <a class="nav-link active" href="/admin/examsBank">بنك الأسألة <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/admin/exam/home">الإمتحانات</a>
+                <a class="nav-link" href="/admin/student">الطلاب</a>
+                <a class="nav-link" href="/admin/levels">المراحل</a>
+                <a class="nav-link" href="/admin/groups">المجموعات</a>
+                <a class="nav-link" href="/admin/absent">الغياب</a>
+                <a class="nav-link" href="/admin/membership">الشهر</a>
+                <a class="nav-link" href="/admin/secretary">المشرفين</a>
+                <div class="dropdown">
+                    <button style="color: #FFF;" class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                خيارات
+                            </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل</a>
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تاني</a>
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تالت</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </nav>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container">
+                    <form class=" mt-3 mb-3" action="{{form}}" method="POST" autocomplete="off">
+                        <div class="form-group">
+                            <label for="formGroupExampleInput">اسم الطالب</label>
+                            <input type="text" name="name" disabled class="form-control input-sm cheque-amt" Placeholder="Enter Cheque Amount" onkeypress="return isNumber(event)">
+                        </div>
+                        <div class="form-group">
+                            <label for="inputState">الشهر</label>
+                            <select id="inputState" name="month" class="form-control">
+								<option selected>1</option>
+								<option>2</option>
+								<option>3</option>
+								<option>4</option>
+								<option>5</option>
+								<option>6</option>
+								<option>7</option>
+								<option>8</option>
+								<option>9</option>
+								<option>10</option>
+								<option>11</option>
+								<option>12</option>
+							</select>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputState">المجموعة</label>
+                            <select id="inputState" name="group" class="form-control">
+								<option selected>سبت - اتنين - اربع</option>
+								<option>حد - تلات - خميس</option>
+							</select>
+                        </div>
+                        <div class="form-group">
+                            <label for="formGroupExampleInput2">القيمة</label>
+                            <input required type="text" name="value" class="form-control" id="formGroupExampleInput2" placeholder="ثمن الشهر">
+                        </div>
+                        <button type="submit" class="btn btn-primary">تأكيد</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div style="z-index: 3 !important;">
+
+            <table id="myTable" class="display nowrap" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>اسم الطالب</th>
+                        <th>1</th>
+                        <th>2</th>
+                        <th>3</th>
+                        <th>4</th>
+                        <th>5</th>
+                        <th>6</th>
+                        <th>7</th>
+                        <th>8</th>
+                        <th>9</th>
+                        <th>10</th>
+                        <th>11</th>
+                        <th>12</th>
+                        <th>خيارات</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="cheque-amt">حازم مسعد</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td style="color: #2ae72a; font-weight: bold;">&#10004;</td>
+
+                        </td>
+                        <td>&#10004;</td>
+                        <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+						دفع
+					</button></td>
+                    </tr>
+                    <tr>
+                        <td class="cheque-amt">الاستاذ معوض</td>
+                        <td style="color: #2ae72a;">&#10004;</td>
+                        <td>&#10004;</td>
+                        <td>&#10004;</td>
+                        <td>&#10004;</td>
+                        <td>&#10004;</td>
+                        <td>&#10004;</td>
+                        <td>&#10004;</td>
+                        <td>&#10004;</td>
+                        <td>&#10004;</td>
+                        <td style="color: red; font-weight: bold;">0</td>
+                        <td style="color: red; font-weight: bold;">0</td>
+                        <td style="color: red; font-weight: bold;">0</td>
+                        <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+						دفع
+					</button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
+
+
+
+</body>
+
+</html>
