--- a/app/View/admin/students/home.html
+++ b/app/View/admin/students/home.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 text-center mb-3 mt-3">
+<!-- <div class="col-md-12 text-center mb-3 mt-3">
     <a href="/admin/student/add"><button class="btn btn-primary"> إضافة</button></a>
 </div>
 
@@ -43,4 +43,154 @@
 
         </tbody>
     </table>
+</div> -->
+
+
+
+<div class="overlay-background">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">الأستاذ معوض</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav float-right text-right">
+                <a class="nav-link active" href="/admin/examsBank">بنك الأسألة <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/admin/exam/home">الإمتحانات</a>
+                <a class="nav-link" href="/admin/student">الطلاب</a>
+                <a class="nav-link" href="/admin/levels">المراحل</a>
+                <a class="nav-link" href="/admin/groups">المجموعات</a>
+                <a class="nav-link" href="/admin/absent">الغياب</a>
+                <a class="nav-link" href="/admin/membership">الشهر</a>
+                <a class="nav-link" href="/admin/secretary">المشرفين</a>
+                <div class="dropdown">
+                    <button style="color: #FFF;" class="btn dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            خيارات
+                        </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل</a>
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تاني</a>
+                        <a style="color: #000 !important;" class="dropdown-item" href="#">تسجيل تالت</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </nav>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container mb-3 mt-3">
+                    <div class="alert alert-danger mt-3" role="alert">
+                        <p>هل انت متأكد من حذف هذا الطالب نهائيا؟</p>
+                    </div>
+                    <div>
+                        <button type="button" id='target2' class="btn btn-danger ml-1">نعم</button>
+                        <button type="button" id="target3" class="btn btn-light">لا</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="container mb-3 mt-3">
+                    <form action="{{form}}" method="POST" autocomplete="off" class="mt-3 mb-3">
+                        <div class="form-group">
+                            <label style="color: #000;" for="formGroupExampleInput">اسم الطالب</label>
+                            <input type="text" name="name" class="form-control input-sm cheque-amt toedt " Placeholder="Enter Cheque Amount" onkeypress="return isNumber(event)">
+                            <!-- <label style="color: #000;" for="formGroupExampleInput">اسم المستخدم</label>
+								<input type="text" name="user" class="form-control input-sm cheque-amt2 toedt2 "
+									Placeholder="Enter Cheque Amount" onkeypress="return isNumber(event)"> -->
+                            <label style="color: #000; margin-top: 1rem;" for="formGroupExampleInput">الهاتف</label>
+                            <input type="number" name="phone" class="form-control input-sm cheque-amt3 toedt3 " Placeholder="Enter Cheque Amount" onkeypress="return isNumber(event)">
+                            <div class="form-group input-sm cheque-amt4" style="width: 30vw;">
+                                <label for="exampleFormControlSelect1" class="mt-3" style="color:#000">المجموعة</label>
+                                <select class="form-control cheque-amt4 toedt4" id="exampleFormControlSelect1" name="group">
+											<option>المجموعة الأولي</option>
+											<option>المجموعة الثانية</option>
+											<option>المجموعة الثالثة</option>
+											<option>المجموعة الرابعة</option>
+											<option>المجموعة الخامسة</option>
+											<option>المجموعة السادسة</option>
+										</select>
+                            </div>
+                            <label style="color: #000;" for="formGroupExampleInput">كلمة المرور</label>
+                            <input type="text" name="password" class="form-control input-sm cheque-amt5 toedt5" Placeholder="Enter Cheque Amount" onkeypress="return isNumber(event)">
+                            <div class="form-group input-sm cheque-amt4" style="width: 30vw;">
+                                <label for="exampleFormControlSelect1" class="mt-3" style="color:#000">المرحلة</label>
+                                <select class="form-control cheque-amt6 toedt6" id="exampleFormControlSelect1" name="level">
+											<option>المرحلة الأولي</option>
+											<option>المرحلة الثانية</option>
+											<option>المرحلة الثالثة</option>
+											<option>المرحلة الرابعة</option>
+											<option>المرحلة الخامسة</option>
+											<option>المرحلة السادسة</option>
+										</select>
+                            </div>
+
+                            <div>
+                                <button id="target4" type="button" class="btn btn-primary mt-3">تأكيد</button>
+                                <button id="target5" type="button" class="btn mt-3">عودة</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-12 text-center mb-3 mt-3">
+        <button class="btn btn-primary" style="background-color: #5a646e;"> إضافة</button>
+    </div>
+
+    <div class="container">
+        <div style="z-index: 3 !important;">
+
+            <table id="myTable" class="display nowrap" style="width:100%">
+                <thead>
+                    <tr>
+                        <th>اسم المجموعة</th>
+                        <th>اسم المستخدم</th>
+                        <th>الهاتف</th>
+                        <th>المجموعة</th>
+                        <th>كلمة المرور</th>
+                        <th>المرحلة</th>
+                        <th>تعديل</th>
+                        <th>ايقاف مؤقت</th>
+                        <th>حذف</th>
+                    </tr>
+                </thead>
+                <tbody>
+
+
+                    {% for student in students %}
+                    <div>
+                        <tr>
+                            <td class="cheque-amt">{{groups[student['groups_id']-1]['name']}}</td>
+                            <td class="cheque-amt2">{{student['name']}}</td>
+                            <td class="cheque-amt3">{{student['phone']}}</td>
+                            <td class="cheque-amt5">
+                                <td>{{student['password']}}</td>
+                            </td>
+                            <td class="cheque-amt6"> {{levels[groups[student['groups_id']-1]['levels_id']-1]['name']}}</td>
+                            <td><button type="button" class="btn btn-success btnedit" data-toggle="modal" data-target="#exampleModal2">
+										تعديل
+									</button></td>
+                            {% if student['delete_flag'] == 0 %}
+                            <td><a href="/admin/student/disactive/{{student['id']}}"><button type="button" class="btn btn-warning">ايقاف مؤقت</button></a></td>
+                            {% else %}
+                            <td><a href="/admin/student/active/{{student['id']}}"><button type="button" class="btn btn-success"> تفعيل </button></a></td>
+                            {% endif %}
+                            <td><button type="button" class="btn btn-danger btnDelete" data-toggle="modal" data-target="#exampleModal">
+										حذف
+									</button></td>
+                        </tr>
+                    </div>
+                    {% endfor %}
+
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
