--- a/app/static/css/style2.css
+++ b/app/static/css/style2.css
@@ -1,66 +1,42 @@
 body {
     font-family: "Tajawal", "Times New Roman", Times, serif;
     font-weight: bold;
+    background-image: url("/app/static/images/inside-system.jpg");
 }
 
-body nav {
+body .overlay-background {
+    background-color: #00000057;
+    min-width: 100vw;
+    min-height: 100vh;
+    z-index: 1;
+}
+
+body .overlay-background nav {
     margin-bottom: 5rem;
+    color: #FFF !important;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.45) 50%, rgba(0, 0, 0, 0.19) 100%) !important;
 }
 
-body .container .up .frist-up {
-    height: 10rem;
-    width: 40%;
-    float: right;
-    margin-left: 10%;
-    margin-right: 5%;
-    background-color: #D3D3D3;
-    border-radius: 1rem;
+body .overlay-background nav a {
+    color: #FFF !important;
+    font-weight: lighter !important;
 }
 
-body .container .up .second-up {
-    height: 10rem;
-    width: 40%;
-    float: left;
-    margin-left: 5%;
-    background-color: #C0C0C0;
-    border-radius: 1rem;
+body .overlay-background .container {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-body .container .down .frist-down {
-    height: 10rem;
-    width: 40%;
-    float: right;
-    margin-left: 10%;
-    margin-right: 5%;
-    background-color: #A9A9A9;
-    border-radius: 1rem;
-    margin-top: 2rem;
-}
-
-body .container .down .second-down {
-    height: 10rem;
-    width: 40%;
-    float: left;
-    margin-left: 5%;
-    background-color: #808080;
-    border-radius: 1rem;
-    margin-top: 2rem;
-}
-
-#linkcard {
-    border-radius: 25px;
-    background: #0f3057;
-    padding: 20px;
-    width: 200px;
-    height: 150px;
-    text-align: center;
-    padding-top: 50px;
-    margin-bottom: 20px;
-}
-
-#alinkcard {
-    color: #f1f3f8;
-    text-decoration: none
+body .overlay-background .container div {
+    width: 23%;
+    margin-top: 1rem;
+    margin-left: 1%;
+    margin-right: 1%;
+    background-color: #507a869e;
+    border: 1px solid #ddd;
+    border-radius: 4rem;
+    padding: 5rem;
+    color: #FFF;
 }
 
 
